--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,5 +1,5 @@
 header {
-	margin: 15px;
+	margin: 0 15px 15px;
 	padding: 10px;
 
 	background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
