--- a/css/setup/mq.css
+++ b/css/setup/mq.css
@@ -1,3 +1,16 @@
+@media (max-width: 1100px) {
+	.canvas-container {
+		width: 350px;
+		height: 350px;
+	}
+	.editor-options {
+		height: fit-content;
+	}
+	.text-style-continer {
+		gap: 10px;
+	}
+}
+
 @media (max-width: 540px) {
 	.btn-ham {
 		display: flex;
@@ -78,6 +91,11 @@
 		overflow-y: auto;
 	}
 
+	.canvas-container {
+		width: 300px;
+		height: 300px;
+	}
+
 	.image-gallery {
 		overflow-y: hidden;
 		gap: 10px;
@@ -88,17 +106,13 @@
 		width: 100%;
 		height: auto;
 	}
-}
 
-@media (max-width: 1100px) {
-	.canvas-container {
-		width: 350px;
-		height: 350px;
-	}
 	.editor-options {
-		height: fit-content;
+		min-width: 300px;
+		padding: 8px;
 	}
-	.text-style-continer {
-		gap: 10px;
+
+	.editor-options * {
+		font-size: 16px;
 	}
 }
